# uploader

./: .gitignore  .goreleaser.yml  .reg-go-report.txt  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: release.yml
apis/: base.go  command.go  emit.go  encrypt_name_test.go  encrypt_temp_test.go  encrypt_upload_test.go  request.go  upload.go  upload_opts_test.go
apis/methods/: httpclient.go  multipart.go  struct.go  timeout_override.go  timeout_override_test.go
apis/public/1fichier/: api.go  struct.go  upload.go
apis/public/airportal/: api.go  upload.go
apis/public/anonfiles/: api.go  struct.go  upload.go
cmd/: args.go  config.go  controller.go  probe.go  registry.go  registry_test.go  root.go  size_est.go  tool.go  upload_run.go  walker.go
crypto/: aes_test.go  command.go  des_test.go  normalize_key_test.go  padding.go  stream.go
docs/: rust-refactor-plan.md  uploader-deep-dive.md
route/: probe.go  probe_timeout_test.go  registry.go  size.go  upload.go
rust/: .gitignore  Cargo.toml
rust/src/: cli.rs  config.rs  main.rs  probe.rs  registry.rs
rust/src/backends/: bash.rs  cat.rs  cnet.rs  fic.rs  gg.rs  gof.rs  lit.rs  mod.rs  null.rs  temp.rs  tmpf.rs  wss.rs
rust/src/crypto/: des.rs  mod.rs  stream.rs
rust/src/http/: mod.rs  multipart.rs
rust/src/upload/: mod.rs
rust/src/util/: base58.rs  ftp.rs  mod.rs  progress.rs  size.rs  zip.rs
scripts/: cross-rust.sh  reg-rust.sh
utils/: base58.go  base58_test.go  ftp.go  progress.go  progress_interval_test.go  size.go  size_test.go  tools.go  zip.go  zip_test.go
(+56 files in other folders)
